// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messenger setup component should render correctly for setup 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "padding": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "column",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardAppearance="dark"
        onChangeText={[Function]}
        placeholder="password..."
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Object {
            "backgroundColor": "#FFF",
            "borderColor": "#ECECEC",
            "borderRadius": 3,
            "borderWidth": 1,
            "padding": 16,
          }
        }
        underlineColorAndroid="transparent"
      />
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardAppearance="dark"
        onChangeText={[Function]}
        placeholder="confirm password..."
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "backgroundColor": "#FFF",
              "borderColor": "#ECECEC",
              "borderRadius": 3,
              "borderWidth": 1,
              "padding": 16,
            },
            Object {
              "marginTop": 8,
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Object {
          "paddingTop": 16,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
            },
            Object {
              "fontFamily": "Roboto",
            },
            Object {
              "color": "#BBB",
              "marginBottom": 16,
            },
          ]
        }
      >
        Hey @[missing {{user}} value]! It looks like you haven't setup your encrypted chat password yet. We recommend that you use a different password than your account password for added security.
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "padding": 16,
      }
    }
  >
    <View
      onPress={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "rgba(0,0,0,0.40)",
            "borderColor": "rgba(255,255,255,0.60)",
            "borderRadius": 21,
            "borderWidth": 1,
            "paddingHorizontal": 23,
            "paddingVertical": 10,
          },
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "marginTop": 24,
            },
          ],
        ]
      }
      text="SETUP"
    >
      <Text
        onLayout={[Function]}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
            },
            Object {
              "fontFamily": "Roboto",
            },
            Array [
              Object {
                "fontSize": 19,
              },
              Object {
                "color": "#FFFFFF",
              },
              undefined,
              Object {
                "fontWeight": "500",
              },
            ],
          ]
        }
      >
         
        SETUP
         
      </Text>
    </View>
  </View>
</View>
`;

exports[`Messenger setup component should render correctly for unlock 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "padding": 8,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flexDirection": "column",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        editable={true}
        keyboardAppearance="dark"
        onChangeText={[Function]}
        placeholder="password..."
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Object {
            "backgroundColor": "#FFF",
            "borderColor": "#ECECEC",
            "borderRadius": 3,
            "borderWidth": 1,
            "padding": 16,
          }
        }
        testID="MessengerSetupText"
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Object {
          "paddingTop": 32,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
            },
            Object {
              "fontFamily": "Roboto",
            },
            Object {
              "color": "#BBB",
              "marginBottom": 16,
            },
          ]
        }
      >
        · 
        You only need to enter this encryption password once as long as you stay signed in.
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
            },
            Object {
              "fontFamily": "Roboto",
            },
            Object {
              "color": "#BBB",
              "marginBottom": 16,
            },
          ]
        }
      >
        · 
        It is important so that no one other than you and the people you are communicating with can access the content of your messages.
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
            },
            Object {
              "fontFamily": "Roboto",
            },
            Object {
              "color": "#BBB",
              "marginBottom": 16,
            },
          ]
        }
      >
        · 
        By default the content of your messages is fully encrypted. For heightened security you may wish to go to your app settings and turn off push notifications in order to disallow metadata from being tracked.
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "padding": 16,
      }
    }
  >
    <View
      onPress={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          },
          Object {
            "alignContent": "center",
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
          },
          Object {
            "backgroundColor": "rgba(0,0,0,0.40)",
            "borderColor": "rgba(255,255,255,0.60)",
            "borderRadius": 21,
            "borderWidth": 1,
            "paddingHorizontal": 23,
            "paddingVertical": 10,
          },
          Array [
            Object {
              "width": "100%",
            },
            Object {
              "marginTop": 24,
            },
          ],
        ]
      }
      text="UNLOCK"
    >
      <Text
        onLayout={[Function]}
        style={
          Array [
            Object {
              "color": "#FFFFFF",
            },
            Object {
              "fontFamily": "Roboto",
            },
            Array [
              Object {
                "fontSize": 19,
              },
              Object {
                "color": "#FFFFFF",
              },
              undefined,
              Object {
                "fontWeight": "500",
              },
            ],
          ]
        }
      >
         
        UNLOCK
         
      </Text>
    </View>
  </View>
</View>
`;
